test/io/fsouza/chdir/no_such_directory.good
no_such_directory.chpl:2: error: No such file or directory in chdir with path "no-such-dir"
