test/io/fsouza/chdir/no_such_directory.chpl
var directory = "no-such-dir";
chdir(directory);
